# electronics_store

./: .flake8  .gitignore  README.md  pyproject.toml  requirement.txt
electronic_store/: exceptions.py  utils.py
tests/: test.csv  test_error.csv  test_utils.py
utils/: utils.py
